# gemma4runner

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.cpu  README.md  article.md  benchmark.py  config.example.toml  test_multistep.py  test_sandbox.py
crates/gemma4-api/: Cargo.toml
crates/gemma4-api/src/: lib.rs  metrics.rs  middleware.rs  server.rs  streaming.rs
crates/gemma4-api/src/handlers/: chat.rs  completion.rs  health.rs  metrics.rs  mod.rs  models.rs  sandbox.rs
crates/gemma4-api/src/types/: chat.rs  common.rs  completion.rs  error.rs  mod.rs  models.rs
crates/gemma4-api/tests/: types_test.rs
crates/gemma4-core/: Cargo.toml
crates/gemma4-core/src/: attention.rs  chat_template.rs  config.rs  engine.rs  gguf_loader.rs  kv_cache.rs  lib.rs  llama_cpp_backend.rs  loader.rs  mlp.rs  model.rs  moe.rs  multimodal.rs  quantized_model.rs  rope.rs  sampling.rs  sandbox.rs  think_parser.rs  tokenizer.rs  tool_parser.rs
crates/gemma4runner/: Cargo.toml
crates/gemma4runner/src/: cli.rs  config.rs  main.rs
docs/superpowers/plans/: 2026-04-12-gemma4runner-phase1.md  2026-04-12-gemma4runner-phase2.md  2026-04-12-gemma4runner-phase3.md  2026-04-12-gemma4runner-phase4.md  2026-04-12-gemma4runner-phase5.md
docs/superpowers/specs/: 2026-04-12-gemma4runner-design.md
static/: index.html
