[package]
name = "gemma4-core"
version.workspace = true
edition.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
hf-hub = "0.5"
llama-cpp-2 = { workspace = true, optional = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
llama-cpp = ["llama-cpp-2"]
llama-cpp-metal = ["llama-cpp", "llama-cpp-2/metal"]
llama-cpp-cuda = ["llama-cpp", "llama-cpp-2/cuda"]